RESOLVED FIXED168991
REGRESSION (r213168): API test WKUserContentController.ScriptMessageHandlerMultipleHandlerRemoval crashing
https://bugs.webkit.org/show_bug.cgi?id=168991
Summary REGRESSION (r213168): API test WKUserContentController.ScriptMessageHandlerMu...
Ryan Haddad
Reported 2017-02-28 14:45:31 PST
Created attachment 302987 [details] Crash log API test WKUserContentController.ScriptMessageHandlerMultipleHandlerRemoval crashing Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x000000010a7f97a2 WebKit::WebProcessPool::createNewWebProcessRespectingProcessCountLimit(WebKit::WebsiteDataStore*) + 314 (WebProcessPool.cpp:803) 1 com.apple.WebKit 0x000000010a7f993c WebKit::WebProcessPool::createWebPage(WebKit::PageClient&, WTF::Ref<API::PageConfiguration>&&) + 364 (WebProcessPool.cpp:832) 2 com.apple.WebKit 0x000000010a833187 WebKit::WebViewImpl::WebViewImpl(NSView<WebViewImplDelegate>*, WKWebView*, WebKit::WebProcessPool&, WTF::Ref<API::PageConfiguration>&&) + 95 (WebViewImpl.mm:1235) 3 com.apple.WebKit 0x000000010a89103d -[WKWebView _initializeWithConfiguration:] + 3246 (WKWebView.mm:553) 4 com.apple.WebKit 0x000000010a8916ad -[WKWebView initWithFrame:configuration:] + 109 (WKWebView.mm:607) 5 TestWebKitAPI 0x0000000108ea0e47 webViewForScriptMessageHandlerMultipleHandlerRemovalTest(WKWebViewConfiguration*) + 402 (UserContentController.mm:228) 6 TestWebKitAPI 0x0000000108ea09c7 WKUserContentController_ScriptMessageHandlerMultipleHandlerRemoval_Test::TestBody() + 271 (UserContentController.mm:246) 7 TestWebKitAPI 0x0000000108f032cc testing::Test::Run() + 92 8 TestWebKitAPI 0x0000000108f03970 testing::internal::TestInfoImpl::Run() + 178 9 TestWebKitAPI 0x0000000108f03d68 testing::TestCase::Run() + 188 10 TestWebKitAPI 0x0000000108f073f1 testing::internal::UnitTestImpl::RunAllTests() + 581 11 TestWebKitAPI 0x0000000108e24611 TestWebKitAPI::TestsController::run(int, char**) + 131 (TestsController.cpp:80) 12 TestWebKitAPI 0x0000000108efb93b main + 349 (mainMac.mm:52) 13 libdyld.dylib 0x00007fff9d9ba5ad start + 1 https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20WK2%20%28Tests%29/builds/13567/steps/run-api-tests/logs/stdio
Attachments
Crash log (55.47 KB, application/octet-stream)
2017-02-28 14:45 PST, Ryan Haddad
no flags
Ryan Haddad
Comment 1 2017-02-28 14:59:20 PST
Brady Eidson
Comment 2 2017-02-28 15:10:36 PST
Note You need to log in before you can comment on or make changes to this bug.