Fix API test regression(s): REGRESSION (r213168): API test WKUserContentController.ScriptMessageHandlerMultipleHandlerRemoval crashing https://bugs.webkit.org/show_bug.cgi?id=168991

Unreviewed.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createNewWebProcessRespectingProcessCountLimit):

Canonical link: https://commits.webkit.org/185984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213181 268f45cc-cd09-0410-ab3c-d52691b4dbfc